--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,15 @@
 }
 .bnt-color{
     color: rgb(248, 248, 248);
-    background-color: rgba(204, 162, 127, 0.87);
+    background-color: rgba(194, 171, 152, 0.87);
     border-color: #efefef;
 }
 .bg-nav{
-    background-color: transparent;
+    background-color:rgba(46, 187, 197, 0.815);
     color: #616161;
+}
+.bg-find-out-more {
+    color: rgba(236, 101, 101, 0.699);
 }
 
 /*------------------------------------SPECIAL PADDINGS/MARGINS/TEXT */
@@ -43,18 +46,19 @@ header{
     height: 100px;
 }
 
-.link {
-    text-decoration: none;
-    border-bottom: 1px solid #616161;
-}
 .hr-text{
-width:20%;
+    width:20%;
 }
+#hr-text{
+    width:20%;
+    margin-left: 40%;
+}
+
 
 .text{
      font-family: "Nunito", sans-serif;
  }
- .font-text2{
+.font-text2{
      font-family: 'Nanum Pen Script', cursive;
      font-size: 150%;
  }
@@ -127,30 +131,9 @@ a {
      border-bottom: 1px solid #616161;
 }
 /*--------------------------------------------- Images */
-
-#hero-image{
-    height:600px;
-    width: 100%;
-    background: url("../images/heroimage3.jpg") no-repeat center center;
-    background-size: cover;
-    background-color: #efefef;
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
-
-}
-
-#hero-outer{
-    height:600px;
-    width: 100%;
-    overflow:hidden;
-    position: relative;
-}
-
-
 #image-view1 {
     background-attachment: fixed;
-    background-image: url("../images/1helpall.jpg");
+    background-image: url("../images/helpall-home.jpg");
     background-position: bottom;
     background-size: cover;
     height: 80vh;
@@ -171,29 +154,38 @@ a {
 }
 #image-view2 {
     background-attachment: fixed;
-    background-image: url("../images/3helpalltoppage2.jpg");
+    background-image: url("../images/helpall-ourteam.jpg");
     background-position: bottom;
     background-size: cover;
     height: 80vh;
     width: 100vw;
     margin-bottom: 0px;
     z-index: 1;
+    animation-name: hero-zoom;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
 }
 #image-view3 {
     background-attachment: fixed;
-    background-image: url("../images/4helpalltoppage33.jpg");
+    background-image: url("../images/helpall-donate.jpg");
     background-position: bottom;
     background-size: cover;
     height: 80vh;
     width: 100vw;
     margin-bottom: 0px;
     z-index: 1;
+     animation-name: hero-zoom;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
 }
 
 #cover-text h5{
     padding-left: 10px;
-    
 }
+ h5{
+      color: #fafafa;
+    font-size: 1.2rem;
+ }
 
 #cover-text {
     color: #ffffff;
@@ -210,7 +202,7 @@ a {
     padding-left: 10px;
     padding-right: 10px;
 
-    background-color: rgba(241, 109, 107, .7);
+    background-color: rgba(241, 109, 107, 0.9);
 
     bottom:30px;
     right: 120px;
@@ -251,11 +243,9 @@ a {
     padding:0px;
     border-style: solid;
     border-color:#616161;
-    border-width: 1px;
+    border-width: 0px;
     border-radius: 50%;
     margin:0 auto;
-
-
 }
  
 #circle-cover-bg{
@@ -267,10 +257,9 @@ a {
 .circle-container2{
     width: 300px;
     height: 300px;
-    padding:8px;
     border-style: solid;
     border-color:#616161;
-    border-width: 1px;
+    border-width: 0px;
     border-radius: 50%;
     margin:0 auto;
 
@@ -321,8 +310,9 @@ a {
     padding:2px;
     border-style: solid;
     border-color:#616161;
-    border-width: 1px;
+    border-width: 0px;
     border-radius: 50%;
+    box-shadow: 0px 1px 10px 0px dimgrey;
     margin:0 auto;
 
 }
@@ -419,7 +409,7 @@ a {
 }
 /*-------------------------------------------------------------Hover*/
 a:hover {
-    color: rgba(61, 61, 61, 0.5);
+    color:  #fefefe;
 }
 .footer-hover:hover{
     color: rgba(221, 218, 217, 0.9)
@@ -427,11 +417,27 @@ a:hover {
 
 .grow { transition: all .2s ease-in-out; }
 
-.grow:hover { transform: scale(1.1); }
+.grow:hover { transform: scale(1.0); }
 
 .btn-pulse{ transition: all 1s ease-in-out}
 
-.btn-pulse:hover{ transform: scale(1.1);}
+.btn-pulse:hover{ 
+    color: rgba(0, 0, 0, 0.555);
+    background-color:rgba(46, 187, 197, 0.664);
+    transform: scale(1.0);}
+
+.facebook:hover { 
+    color:rgb(30, 49, 156);
+}
+.twitter:hover{
+    color: rgb(0, 168, 247);
+}
+.instagram:hover{
+    color: rgb(150, 94, 240);
+}
+.youtube:hover{
+    color: rgb(255, 0, 0);
+}
 /*---------------------------------------------------------Form*/
 .form{
     padding-top: 30px;
@@ -445,13 +451,13 @@ a:hover {
     margin: 40px;
 
 }
-
+/*---------------------------------------------------------Cards*/
 .card{
     margin: 12px;
     background: white;
     border-radius: 4px;
     padding: 25px;
     font-weight: 100;
-    border: 1px solid black;
-    box-shadow: 1px 1px 10px 3px dimgrey;
+    box-shadow: 0px 1px 10px 0px dimgrey;
 }
+
